--- a/get_all_user/get_all_user.phtml
+++ b/get_all_user/get_all_user.phtml
@@ -6,12 +6,11 @@
 </nav>
 <div class="tab-content" id="nav-tabContent">
   <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0">
-  <?php if($user->get_invi_user($_SESSION['idUser'])): ?>
- <h4 id="text">Invitations</h4>
- <?php endif; ?>
+  <?php // if($user->get_invi_user($_SESSION['idUser'])): ?>
+      <h4 id="text">Invitations</h4>
+  <?php // endif; ?>
  <?php
     foreach($user->get_invi_user($_SESSION['idUser']) as $value):
-        
     ?>
         <?php $user_inviter=$user->get_user($value['id_user1']); ?>
         <div class="mosule d-flex justify-content-center mb-2">
@@ -19,13 +18,12 @@
                       <div class="body py-3 px-2">
                       <p class="m-0" id="text"><?=$user_inviter['name'];?><?=$user_inviter['last_name'];?></p>
                     <p class="font-weight-normal text-muted"><?=$user_inviter['email'];?></p>
-     </div>
-                     
+     </div>           
   </div>
   <div class="d-flex justify-content-center gap-3">
-                  <a href="index.php?id_confirmer=<?=$user_inviter['iduser']?>"><button class="btn btn-primary px-2">Confirmer</button></a>
-                  <a href="index.php?id_cancel=<?=$user_inviter['iduser']?>"><button  class="btn btn-secondary">Annuler</button></a>
- </div>
+        <a href="index.php?id_confirmer=<?=$user_inviter['iduser']?><?=isset($_GET['changer']) ? '&changer' : ''?>"><button class="btn btn-primary px-2">Confirmer</button></a>
+        <a href="index.php?id_cancel=<?=$user_inviter['iduser']?><?=isset($_GET['changer']) ? '&changer' : ''?>"><button  class="btn btn-secondary">Annuler</button></a>
+  </div>
     <?php endforeach; ?>
   </div>
   <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab" tabindex="0">
@@ -44,12 +42,12 @@
                       </div>
      </div>
       <div class="d-flex justify-content-center gap-3">
-                  <a href="index.php?id_ajouter=<?=$value['iduser']?>">
+                  <a href="index.php?id_ajouter=<?=$value['iduser']?><?=isset($_GET['changer']) ? '&changer' : ''?>">
                            <button class="btn btn-primary px-2">
                                 Ajouter
                             </button>
                   </a>
-                  <a href="index.php?id_cancel=<?=$value['iduser']?>"><button  class="btn btn-secondary">Cancel</button></a>
+                  <a href="index.php?id_cancel=<?=$value['iduser']?><?=isset($_GET['changer']) ? '&changer' : ''?>"><button  class="btn btn-secondary">Cancel</button></a>
       </div>
 <hr>
 <?php endif; ?>
