ajouter confition sur story de user

--- a/listamis/listamis.phtml
+++ b/listamis/listamis.phtml
@@ -24,3 +24,10 @@
      <?php endforeach; ?>
  <?php endif; ?>
 </table>
+
+
+<?php 
+/*echo "<pre>";
+var_dump($all_friends);
+echo "</pre>";*/
+?>
