--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -716,7 +716,6 @@ main .container-fluid .left .profile{
 
 .left .sidebar .menu-item.active{
   border-top-left-radius: var(--card-border-radius);
-  overflow: hidden;
 }
 
 .left .btn{
@@ -730,6 +729,7 @@ main .container-fluid .left .profile{
   max-height: 200px;
   overflow-y: scroll;
 }
+
 
 .all_story_for_user{
   max-height: 500px;
@@ -746,21 +746,21 @@ main .container-fluid .left .profile{
 
   
 .story-container .content .img-container{
-display: inline-block;
-width: 4rem;
-height: 4rem;
-border-radius: 50px;
-background:
-radial-gradient(rgba(0,0,0,0.15) 60%,transparent 0) , radial-gradient(white 65%,transparent 0),linear-gradient(to top right,blue,red);
+     display: inline-block;
+     width: 4rem;
+     height: 4rem;
+     border-radius: 50px;
+     background:
+     radial-gradient(rgba(0,0,0,0.15) 60%,transparent 0) , radial-gradient(white 65%,transparent 0),linear-gradient(to top right,blue,red);
 }
 
 .story-container .content-add .img-container{
-display: inline-block;
-width: 4rem;
-height: 4rem;
-border-radius: 50px;
-cursor: pointer;
-background:gray;
+    display: inline-block;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50px;
+    cursor: pointer;
+    background:gray;
 }
 
 .left .sidebar .menu-item:last-child{
@@ -768,63 +768,64 @@ background:gray;
 }
 
 .story-container .content-myself .img-container{
-display: inline-block;
-width: 4rem;
-height: 4rem;
-border-radius: 50px;
-background:
-radial-gradient(rgba(0,0,0,0.15) 60%,transparent 0) , radial-gradient(white 65%,transparent 0),linear-gradient(to top right,black,white);
+   display: inline-block;
+   width: 4rem;
+   height: 4rem;
+   border-radius: 50px;
+   background:
+   radial-gradient(rgba(0,0,0,0.15) 60%,transparent 0) , radial-gradient(white 65%,transparent 0),linear-gradient(to top right,black,white);
 }
+
 .all_story{
   overflow-x: auto;
-  overscroll-behavior: contain;
   border: 1px solid #fff;
   background-color: #fff;
   border-radius: 10px;
-  padding: 2rem;
-  width: 100%;
+  padding: 10px 10px;
+  width: 95%;
+  margin: 5px 10px;
 }
+
 .story-container{
-display: grid;
-grid-auto-flow: column;
-grid-auto-columns: 5rem;
-grid-gap: 2rem;
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: 5rem;
+  grid-gap: 2rem;
 }
 
 .story-container .content,.story-container .content-myself{
-display: grid;
-grid-gap: 0.5rem;
-margin: 0;
-text-align: center;
-position: relative;
-cursor: pointer;
-user-select: none;
-transition: all 0.2s ease-in;
+   display: grid;
+   grid-gap: 0.5rem;
+   margin: 0;
+   text-align: center;
+   position: relative;
+   cursor: pointer;
+   transition: all 0.2s ease-in;
 }
-
 
 .story-container .content:hover{
-transform: scale(1.1);
+  transform: scale(1.1);
 }
-
 
 .slide{
-border-radius: 30px;
+  border-radius: 30px;  
 }
 
-
 .middle .feeds .feed{
-  background: white;
+  width: 95%;
+  margin: 5px 10px;
+  height:40%;
+  background-color: #fff;
   border-radius: var(--card-border-radius);
-  padding: var(--btn-padding);
-  margin: 1rem 0;
   font-size: 0.85rem;
-  line-height: 1.5;
+
 }
 
 .middle .feed .head{
   display: flex;
   justify-content: space-between;
+  padding: 15px 10px;
+  border-bottom: 1px solid #bfbfbf;
 }
 
 .middle .feed .user{
@@ -832,24 +833,24 @@ border-radius: 30px;
   gap: 1rem;
 }
 
-.middle .feed .photo{
-  border-radius: var(--card-border-radius);
-  overflow: hidden;
-  margin: 0.7rem 0;
+.middle .feed .photo {
+  width: 56%;
+  height: 40%;
+   margin-left: 20%;
+  padding-bottom: 10px;
 }
 
-.middle .feed .action-buttons{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 1.4rem;
-  margin: 0.6rem;
+.middle .feed .photo img{
+  width: 100%;
+  height: 100%;
+  border-radius: 25px;
 }
+
 
 .middle .liked-by {
   display: flex;
-
 }
+
 .middle .liked-by span{
   width: 1.4rem;
   height: 1.4rem;
@@ -868,11 +869,167 @@ border-radius: 30px;
   margin-left: 0.5rem;
 }
 
+/** button menu */
+
+.btn_menu{
+  background-color: #b50edf;
+  color: #fff;
+  padding: 5px 7px;
+  border: none;
+  border-radius: 15px;
+  position: absolute;
+  z-index: 999;
+  text-align: center;
+  left: 40%;
+  display: none;
+  animation: scroll .5s infinite ease;
+
+}
+
+@keyframes scroll {
+  25%{
+    transform: translateY(0);
+  }
+  50%{
+    transform: translateY(5px);
+  }
+  100%{
+    transform: translateY(0);
+  }
+}
+/** add pub */
+
+.container_post{
+  width: 95%;
+  height: 480px;
+  margin: 5px 10px;
+  overflow: hidden;
+  background: #fff;
+  border-radius: 10px;
+  transition: height 0.2s ease;
+  box-shadow: 0 12px 28px rgba(0, 0, 0, 0.12);
+}
+
+.container_post .wrapper{
+  width: 100%;
+  display: flex;
+}
+
+.container_post .wrapper section{
+  width: 100%;
+  background: #fff;
+}
+
+.container_post img{
+  cursor: pointer;
+}
+
+.container_post .post{
+  transition: margin-left 0.18s ease;
+}
+
+.container_post.active .post{
+  margin-left: -500px;
+}
+
+.post .header{
+  font-size: 22px;
+  font-weight: 600;
+  padding: 17px 0;
+  text-align: center;
+  border-bottom: 1px solid #bfbfbf;
+}
+
+.post form{
+  margin: 20px 25px;
+}
+
+.post form .content{
+  display: flex;
+  align-items: center;
+}
+
+.post form .content img{
+  cursor: default;
+  max-width: 52px;
+}
+
+.post form .content .details{
+  margin: -3px 0 0 12px;
+}
+
+form .content .details p{
+  font-size: 17px;
+  font-weight: 500;
+}
+
+form textarea{
+  resize: none;
+  font-size: 18px;
+  padding: 15px ;
+  margin-top: 30px;
+  min-height: 100px;
+}
+
+.theme{
+  display: flex;
+  gap:4px;
+}
+
+.color-circle {
+  width: 50px;
+  font-size: 10px;
+  font-weight: 600;
+  color: #fff;
+  cursor: pointer;
+  margin: 5px;
+  height: 25px;
+  text-align:center;
+  border: none;
+  background-size: 300% 100%;
+  border-radius: 10px;
+  transition: all .4s ease-in-out;
+}
+
+.color-circle:hover {
+  background-position: 100% 0;
+  transition: all .4s ease-in-out;
+}
+
+.color-circle.color1 {
+  background-image: linear-gradient(to right, #fff, #fff, #ffff, #fff);
+  box-shadow: 0 2px 7.5px 0 #000;
+}
+
+.color-circle.color2 {
+  background-image: linear-gradient(to right, #de5b89, #de5b89, #ff2d75, #ff2d75);
+  box-shadow: 0 2px 7.5px 0 rgba(3, 27, 104, 0.75);
+}
+
+.color-circle.color3 {
+  background-image: linear-gradient(to right, #1439b4, #2696E8, #2696E8, #2550dd);
+  box-shadow: 0 2px 7.5px 0 #2696E8;
+}
+
+.decription{
+  font-size: 18px;
+  font-weight: 600;
+  padding: 10px 15px;
+  text-align: center;
+}
+
+.sidebar_small{
+  display: grid;
+  justify-content:center;
+  margin-top: 60px;
+}
 
 @media screen and (max-width:1200px) {
+
   .container-fluid{
       width: 100%;
   }
+
   main .container-fluid{
       grid-template-columns: 5rem auto 30vw;
       gap: 1rem;
@@ -893,8 +1050,12 @@ border-radius: 30px;
   .left .btn{
       display: none;
   }
-}
 
+  .middle{
+    overflow-x: hidden;
+  }
+
+}
 
 @media (max-width:992px) {
  
@@ -911,13 +1072,20 @@ border-radius: 30px;
       position: fixed;
       right: 0;
   }
+
   main .container-fluid .middle{
       grid-column: 1/3;
-      overflow-y: hidden;
   }
+
   main .container-fluid .right{
       display: none;
   }
+
+  .middle{
+    overflow-x: hidden;
+  }
+
+
 }
 
 @media (max-width:500px) {
@@ -930,13 +1098,18 @@ border-radius: 30px;
      display: block;
   }
 
+  .middle .feed .photo {
+    width:100%;
+    height: 100%;
+  }
+
   .story-container .content .img-container img,.story-container .content-add .img-container img,.story-container .content-myself .img-container img{
     display: block;
     width: 3rem;
     height: 3rem;
     object-fit: cover;
     clip-path: circle(42%);
-    }
+  }
   
   .story-container .content .img-container{
     display: inline-block;
@@ -965,155 +1138,140 @@ border-radius: 30px;
     radial-gradient(rgba(0,0,0,0.15) 60%,transparent 0) , radial-gradient(white 65%,transparent 0),linear-gradient(to top right,black,white);
   }
 
-#side_profil{
+  #side_profil{
      width:100%;
-     position: relative;
-     height: 100%;
-     transform: translate(-50%,-50%);
-     top: 70%;
-     left: 50%;
+     font-size: 15px !important;
+  }
+
+  #body_notif{
+     width:100%;
+  }
+
+  .middle{
+    overflow-x: hidden;
+  }
+
+  .middle{
+    overflow-x: hidden;
+    padding: 20px 15px;
+  }
+
+  main .container-fluid{
+   display: grid;
+   grid-template-columns:0 100% 0;
+   justify-content: center;
+  }
+
+  .middle .feed  .photo img{
+    width: 100%;
+    height: 100%;
+    padding: 15px 20px;
+    border-radius: 25px;
+  }
+
+  .middle .feed  .photo {
+     margin-left: 0;
+  }
+
 }
 
-#body_notif{
-  width:100%;
+@media (max-width:450px) {
+
+  .container-fluid{
+    width: 100%;
+  }
+
+  textarea{
+    width: 100%;
+  }
+
+  .middle{
+     overflow-x: hidden;
+     padding: 20px 15px;
+   }
+
+   main .container-fluid{
+    display: grid;
+    grid-template-columns:0 100% 0;
+    justify-content: center;
+   }
+
+   .left {
+     display: none;
+   }
+
+   .middle .feed  .photo {
+    margin-left: 0;
+  }
+
+   .middle .feed  .photo img{
+    width: 100%;
+    height: 100%;
+    padding: 15px 20px;
+    border-radius: 25px;
+  }
+
+  .btn_menu{
+    display: block;
+  }
+
 }
 
 
+@media (max-width:350px) {
+
+  .middle .feed .head{
+    display: flex;
+    justify-content: space-between;
+    padding: 6px 3px;
+    border-bottom: 1px solid #bfbfbf;
+  }
+  
+  .middle .feed .user{
+    display: flex;
+    gap: 8px;
+  }
+
+  .middle .feed .decription {
+    font-size: 15px;
+  }
+
+  .middle .ingo h3{
+    font-size: 15px;
+  }
+
+  .middle .profile-photo img{
+    width: 50px;
+    height: 60px;
+    border-radius: 25px;
+  }
+
+  .middle .feed .photo {
+    width: 100% !important;
+    margin-left: 0;
+  }
+
+  .middle .feed  .photo img{
+    width: 100%;
+    height: 100%;
+    padding: 15px 20px;
+    border-radius: 25px;
+  }
+
+  .middle .feed .action-buttons{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.4rem;
+    margin: 0.6rem;
+  }
+
+  .btn_menu{
+    display: block;
+  }
+
 }
 
-
-/** add pub */
-.container{
-  width: 100%;
-  height: 480px;
-  margin-top: 25px;
-  overflow: hidden;
-  background: #fff;
-  border-radius: 10px;
-  transition: height 0.2s ease;
-  box-shadow: 0 12px 28px rgba(0, 0, 0, 0.12);
-}
-.container.active{
-  height: 590px;
-}
-.container .wrapper{
-  width: 100%;
-  display: flex;
-}
-.container .wrapper section{
-  width: 100%;
-  background: #fff;
-}
-.container img{
-  cursor: pointer;
-}
-.container .post{
-  transition: margin-left 0.18s ease;
-}
-.container.active .post{
-  margin-left: -500px;
-}
-.post .header{
-  font-size: 22px;
-  font-weight: 600;
-  padding: 17px 0;
-  text-align: center;
-  border-bottom: 1px solid #bfbfbf;
-}
-.post form{
-  margin: 20px 25px;
-}
-.post form .content,
-.audience .list li .column{
-  display: flex;
-  align-items: center;
-}
-.post form .content img{
-  cursor: default;
-  max-width: 52px;
-}
-.post form .content .details{
-  margin: -3px 0 0 12px;
-}
-form .content .details p{
-  font-size: 17px;
-  font-weight: 500;
-}
-
-form textarea{
-  resize: none;
-  font-size: 18px;
-  margin-top: 30px;
-  min-height: 100px;
-}
-form textarea::placeholder{
-  color: #858585;
-}
-form textarea:focus::placeholder{
-  color: #b3b3b3;
-}
-
-form .options{
-  height: 57px;
-  margin: 15px 0;
-  padding: 0 15px;
-  border-radius: 7px;
-  border: 1px solid #B9B9B9;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-}
-form .options :where(.list, li),
-.audience :where(.arrow-back, .icon, li .radio){
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-form .options p{
-  color: #595959;
-  font-size: 15px;
-  font-weight: 500;
-  cursor: default;
-}
-form .options .list{
-  list-style: none;
-}
-.options .list li{
-  height: 42px;
-  width: 42px;
-  margin: 0 -1px;
-  cursor: pointer;
-  border-radius: 50%;
-}
-.options .list li:hover{
-  background: #f0f1f4;
-}
-.options .list li img{
-  width: 23px;
-}
-form button{
-  height: 53px;
-  color: #fff;
-  font-size: 18px;
-  font-weight: 500;
-  cursor: pointer;
-  color: #BCC0C4;
-  cursor: no-drop;
-  border-radius: 7px;
-  background: #e2e5e9;
-  transition: all 0.3s ease;
-}
-.theme{
-  display: flex;
-  gap:4px;
-}
-
-.color-circle{
-  width: 20px;
-  height: 20px;
-  border:1px solid #000;
-  border-radius: 25px;
-
-  cursor: pointer;
-}
 
 
 
